# simpleCOMPLEXITY

./: .gitignore  INSTALL_NOW.txt  INSTALL_ON_HOME_MACHINE.txt  QUICK_INSTALL.sh  README.md  VERIFICATION_CHECKLIST.txt
demo/: README.md  benchmark.py  comprehensive_demo.py  run_demo.sh
demo/attack_simulations/: network_exfiltration.py  resource_exhaustion.py
docs/: DEPLOYMENT.md  KAGGLE_COMPATIBILITY.md  KAGGLE_MODE_CONCEPT.py  QUICKSTART.md  SECURITY.md  USE_CASES.md
docs/rust_design/: PYTHON_VS_RUST_COMPARISON.md  WORM_RUST_DESIGN.md
examples/: data_analysis.py  network_blocking_demo.py  text_processing.py
examples/arc_prize_workflow/: 01_download_dataset.py  02_train_model.py  03_evaluate.py  04_generate_predictions.py  05_submit.py  README.md  arc_solver.py  run_full_pipeline.sh
scripts/: install.sh  remote_install.sh  run_tests.sh  uninstall.sh
src/worm/: __init__.py  worm.py
src/worm/hooks/: __init__.py  import_restrictions.py
src/worm/modules/: __init__.py  restricted_subprocess.py
src/worm/seccomp/: __init__.py  network_filter.py
src/worm/security/: __init__.py  audit_log.py  filesystem_sandbox.py  resource_limits.py  restricted_builtins.py
tests/: __init__.py  test_import_restrictions.py  test_integration.py  test_subprocess_restrictions.py
tools/: ioc_monitor.py  worm_monitor.sh
worm-rust-poc/: README.md
worm-rust-poc/examples/file_processing/src/: main.rs
worm-rust-poc/examples/hello_worm/src/: main.rs
worm-rust-poc/worm_std/: Cargo.toml
worm-rust-poc/worm_std/src/: lib.rs  process.rs
(+1 files in other folders)
